# doompile

./: .gitignore  AGENTS.md  KB_PLAN.md  MEMORY.md  opencode.json  pyproject.toml
archive/: AGENTS.md
archive/2026-05-17/: MEMORY.md  README.md  pyproject.toml
archive/2026-05-17/archive/: 2026-04-18.md  2026-04-19.md
archive/2026-05-17/docs/: project-spec.md
archive/2026-05-17/src/doompile/: __main__.py
archive/2026-05-17/src/doompile/ai/: __init__.py
archive/2026-05-17/src/doompile/ai/backends/: __init__.py
archive/2026-05-17/src/doompile/ai/prompts/: __init__.py
archive/2026-05-17/src/doompile/cli/: __init__.py
archive/2026-05-17/src/doompile/cli/renderers/: __init__.py
archive/2026-05-17/src/doompile/concepts/: __init__.py
archive/2026-05-17/src/doompile/connectors/: __init__.py
archive/2026-05-17/src/doompile/connectors/base/: __init__.py
archive/2026-05-17/src/doompile/connectors/twitter_bookmarks/: __init__.py
archive/2026-05-17/src/doompile/core/: __init__.py
archive/2026-05-17/src/doompile/db/models/: __init__.py
archive/2026-05-17/src/doompile/ingestion/: __init__.py
archive/2026-05-17/src/doompile/ocr/: __init__.py
archive/2026-05-17/src/doompile/planning/: __init__.py
archive/2026-05-17/src/doompile/planning/profiles/: __init__.py
archive/2026-05-17/src/doompile/progress/: __init__.py
archive/2026-05-17/src/doompile/resources/: __init__.py
archive/2026-05-17/src/doompile/review/: __init__.py
archive/2026-05-17/src/doompile/tracing/: __init__.py
docs/: project-spec.md
src/doompile/: __init__.py
(+12 files in other folders)
