[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "doompile"
version = "0.1.0"
description = "CLI-first learning planner built from saved resources"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pile = "doompile.cli.app:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
